# halo2aggregator-s

./: .gitignore  Cargo.toml  License.md  README.md  rustfmt.toml
gnark/: circuit.go  common.go  config.go  ecc.go  go.mod  go.sum  main.go  transcript.go  u256.go
gnark/sol/migrations/: 1_deploy_contracts.js
gnark/sol/test/: test.js
sol/: package.json  truffle-config.js
sol/contracts/: AggregatorConfig.sol  AggregatorLib.sol  AggregatorVerifier.sol
sol/migrations/: 1_deploy_contracts.js
sol/templates/: AggregatorConfig.sol.tera  AggregatorVerifier.sol.template  AggregatorVerifierStep1.sol.tera  AggregatorVerifierStep2.sol.tera  AggregatorVerifierStepEnd.sol.tera  AggregatorVerifierStepStart.sol.tera
sol/test/: test.js
src/: lib.rs  main.rs  utils.rs
src/api/: arith.rs  ast_eval.rs  mod.rs  transcript.rs
src/api/arith/: ecc.rs  field.rs  mod.rs
src/api/halo2/: builder.rs  lookup.rs  mod.rs  permutation.rs  query.rs  verifier.rs
src/api/halo2/protocols/: logup.rs  lookup.rs  mod.rs  permutation.rs  shuffle.rs  vanish.rs
src/api/halo2/query/: mod.rs  schema.rs
src/circuit_verifier/: circuit.rs  helper.rs  mod.rs  transcript.rs
src/circuits/: mod.rs  utils.rs
src/circuits/samples/: simple.rs
src/gnark_verifier/: codegen.rs  mod.rs
src/native_verifier/: mod.rs
src/solidity_verifier/: codegen.rs  mod.rs
src/transcript/: poseidon.rs  sha256.rs
