[package]
name = "halo2aggregator-s"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "1"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
halo2ecc-s = { git = "https://github.com/lanbones/halo2ecc-s.git", tag = "bisect-lookup-0.5.6" }
ark-std = { version = "0.4.0" }
poseidon = { git = "https://github.com/DelphinusLab/poseidon.git" }
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
tera = "1.15.0"
sha2 = "0.10.6"
sha3 = "0.10.8"
lazy_static = "1.4.0"

[features]
default = []
profile = ["ark-std/print-trace", "halo2ecc-s/profile", "halo2ecc-s/profile"]
cuda = ["halo2_proofs/cuda", "halo2ecc-s/cuda"]

[patch."https://github.com/DelphinusLab/halo2-gpu-specific.git"]
halo2_proofs = { git = "https://github.com/mooreland/halo2-gpu-specific.git", branch = "add_shuffle" }