[package]
name = "halo2aggregator-s"
version = "1.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "1"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
#halo2ecc-s = { git = "https://github.com/DelphinusLab/halo2ecc-s.git", tag = "bisect-lookup-0.5.7" }
halo2ecc-s = {git="https://github.com/DelphinusLab/halo2ecc-s.git", branch="moore/miller_loop_c_wi"}
ark-std = { version = "0.4.0" }
ark-ff = {version = "0.4.2"}
ff = "0.12"
poseidon = { git = "https://github.com/DelphinusLab/poseidon.git" }
num-integer = "0.1"
num-bigint = { version = "0.4.5", features = ["rand"] }
num-traits = "0.2.18"
tera = "1.15.0"
sha2 = "0.10.6"
sha3 = "0.10.8"
lazy_static = "1.4.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }

[features]
default = []
profile = ["ark-std/print-trace", "halo2ecc-s/profile", "halo2ecc-s/profile"]
cuda = ["halo2_proofs/cuda", "halo2ecc-s/cuda"]


[patch."https://github.com/lanbones/pairing"]
pairing = {git ="https://github.com/mooreland/pairing", branch="paring_with_c_wi", package = "pairing_bn256"}
