[package]
name = "halo2aggregator-s"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2b_simd = "1"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", branch="moore/logup_extent", default-features = true }
halo2ecc-s = { git="https://github.com/DelphinusLab/halo2ecc-s.git", branch="moore/logup_extend" }
ark-std = { version = "0.4.0" }
ark-ff = {version = "0.4.2"}
ff = "0.12"
poseidon = { git = "https://github.com/DelphinusLab/poseidon.git" }
num-integer = "0.1"
num-bigint = { version = "0.4.5", features = ["rand"] }
num-traits = "0.2.18"
tera = "1.15.0"
sha2 = "0.10.6"
sha3 = "0.10.8"
lazy_static = "1.4.0"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[features]
default = []
profile = ["ark-std/print-trace", "halo2ecc-s/profile", "halo2ecc-s/profile"]
cuda = ["halo2_proofs/cuda", "halo2ecc-s/cuda"]
on_prove_pairing_affine = []
